00_spreadsheet.css
/* ... */
    .lm-scrllgngn__block_sticky[data-id="stop-motion-globe"] canvas {
        border-radius: 100%;
    }

    .lm-climat__projections-container {
        margin: 0 auto;
    }

    .lm-climat__projections {
        max-width: 375px;
        text-align: center;
    }

    .lm-climat__projections_label {
        line-height: 140%;
    }

    /* les overlays */

    .scr-background-overlay-light {
        height: 100vh;
        width: 100vw;
        background-color: #FFFDED;
        backdrop-filter: blur(30px);
        opacity: 0.95;
    }

    .scr-background-overlay-dark {
        height: 100vh;
        width: 100vw;
        background-color: #0E101B;
        opacity: 0.85;
        transition: opacity 600ms;
    }

    .lm-scrllgngn_page-01_03 .scr-background-overlay-dark,
    .lm-scrllgngn_page-01_04 .scr-background-overlay-dark {
        opacity: 0.75;
    }

    .lm-scrllgngn_page-01_05 .scr-background-overlay-dark,
    .lm-scrllgngn_page-15 .scr-background-overlay-dark,
    .lm-scrllgngn_page-15-1 .scr-background-overlay-dark {
        opacity: 0.5;
    }

    .lm-scrllgngn_page-21 .scr-background-overlay-dark,
    .lm-scrllgngn_page-21-2 .scr-background-overlay-dark {
        opacity: 0.97;
    }

    .lm-scrllgngn_page-16 .scr-background-overlay-dark,
    .lm-scrllgngn_page-17 .scr-background-overlay-dark,
    .lm-scrllgngn_page-18 .scr-background-overlay-dark,
    .lm-scrllgngn_page-19 .scr-background-overlay-dark,
    .lm-scrllgngn_page-20 .scr-background-overlay-dark {
        opacity: 0;
    }


    /* le mobile */

    @media screen and (max-width: 1024px) {

        .scr-wrapper-card-left {
            width: unset;
        }
    }

    @media screen and (max-width: 800px) {

        .scr-wrapper {
            min-height: 110vh;
        }

        .scr-wrapper-home {
            gap: 20px;
        }

        .scr-wrapper-intro {
            padding: unset;
            padding-top: 200px;
        }

        .scr-background {
            object-fit: contain;
        }

        .scr-title {
            font-size: 32px;
            line-height: 1;
            max-width: 84%;
        }

        .scr-chapo {
            font-size: 18px;
            line-height: 1.4;
            max-width: 84%;
        }

        .scr-intro {
            font-size: 17px;
            line-height: 1.4;
            max-width: 84%;
        }

        .scr-chapter-title {
            font-size: 26px;
            line-height: 1.2;
            max-width: 84%;
        }

        .scr-chapter-intro-dark {
            font-size: 17px;
            line-height: 1.4;
            max-width: 84%;
        }

        .scr-conclusion {
            font-size: 17px;
            line-height: 1.4;
            max-width: 84%;
        }

        .scr-chapter-background {
            background-repeat: no-repeat;
            background-position: bottom;
            background-size: 180%;
        }

        .scr-chapter-3-background {
            background-repeat: repeat-y;
            background-size: 160%;
        }

        .scr-label {
            font-size: 12px;
            line-height: 20px;
        }

        .scr-card-light {
            max-width: 90%;
            padding: 20px;
            font-size: 14px;
            line-height: 1.4;
        }

        .scr-card-dark {
            max-width: 90%;
            padding: 20px;
            font-size: 14px;
            line-height: 1.4;
        }

        .scr-plain-text.scr-plain-text_dark {
            font-size: 17px;
            line-height: 1.45;
            letter-spacing: -0.01em;
            max-width: 84%;
        }

        .scr-plain-text {
            font-size: 17px;
            line-height: 1.45;
            letter-spacing: -0.01em;
            max-width: 84%;
        }

        .scr-credits {
            font-size: 14px;
            line-height: 1.2;
        }

        .scr-wrapper-card-left {
            width: unset;
        }

        .scr-svg-infog {
            justify-content: flex-start;
            padding: 100px 15px 0 15px;
        }

        .scr-infog>* {
            top: 40%;
            width: 115vmin;
            height: 115vmin;
        }

        .scr-noise {
            background-size: 105px;
            opacity: 0.080;
        }

        .scr-noise-light {
            background-size: 105px;
            opacity: 0.065;
        }

        .lm-climat__projections_legend {
            transform: scale(0.85);
        }
    }

    /* typos svg */

    @media screen and (max-width: 600px) {
      .scr-infog-axis-text {
        font-size: 16px;
      }

      .scr-infog-axis-text-big {
        font-size: 22px;
      }

      .scr-infog-text {
        font-size: 22px;
      }

      .scr-infog-text-big {
        font-size: 24px;
      }

      .scr-infog-text-v-big {
        font-size: 32px;
      }

      .scr-infog_translate-10 {
        transform: translateX(10px);
      }

      .scr-infog_translate-60 {
        transform: translateX(60px);
      }

      .scr-infog_translate-min15 {
        transform: translateX(-15px);
      }

      .scr-infog_translate-min60 {
        transform: translateX(-60px);
      }

      .scr-infog_translate-min150 {
        transform: translateX(-150px);
      }

      .scr-infog_translate-diag {
        transform: translate(252.295px, 755.962px);
      }

      .scr-infog_translate-curve-1 {
        transform: translate(-60px, -10px);
      }

      .scr-infog_translate-curve-2 {
        transform: translate(-20px, -40px);
      }
    }

    /* les très petit mobiles */

    @media screen and (max-width: 320px) {
        .scr-intro {
            font-size: 18px;
            line-height: 1.4;
            max-width: 84%;
        }

        .scr-chapter-title {
            font-size: 30px;
            max-width: 84%;
        }

        .lm-climat__projections_legend {
            transform: scale(0.7);
        }
    }
</style>

